// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Disclosure props 1`] = `
Object {
  "className": "css-13h683e css-1pwrqjj css-o12mw7 fp-Box fp-DisclosureContent",
  "hidden": true,
  "id": "test",
  "onAnimationEnd": [Function],
  "onTransitionEnd": [Function],
  "style": Object {
    "display": "none",
  },
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  Hello world
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfd;
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9e1;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b5bdcc 0px 0px 0px 1px, #cfd8e3 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-0:hover {
  background-color: #f7f7fa;
}

.emotion-0:hover:active {
  background-color: #e6e6eb;
}

.emotion-4 {
  border-left: 4px solid #000000;
  padding: 1rem;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Button fp-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <blockquote
    class="emotion-4 emotion-1 emotion-2 emotion-3 fp-Box fp-Blockquote fp-DisclosureContent"
    hidden=""
    id="test"
    style="display: none;"
  >
    Hello world
  </blockquote>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;

exports[`overrides Disclosure.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;

exports[`props renders correctly when the hidden is visible 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DisclosureContent"
    id="test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DisclosureContent"
    hidden=""
    id="test"
    style="display: none;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Disclosure.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;
